<resources>
    <string name="app_name">Budgt</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_overview">Overview</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="title_accounts">Accounts</string>
    <string name="enter_description">Enter Description</string>
    <string name="dollar_sign">$</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="new_transaction">New Transaction</string>
    <string name="settings">Settings</string>
    <string name="transactions">Transactions</string>
    <string name="today">Today</string>
    <string name="done">done</string>
    <string name="select_category">Select Category</string>
    <string name="select_category_group">Select Category Group</string>
    <string name="select_account">Select Account</string>
    <string name="choose">Choose...</string>
    <string name="categories">Categories</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="no_description">Please enter a description!</string>
    <string name="no_category">Please select a category!</string>
    <string name="no_account_selected">Please select an account!</string>
    <string name="no_amount">Please enter a transaction amount!</string>
    <string name="no_zero">Transaction amount cannot be 0!</string>
    <string name="transactions_file_name">com.jaz.budgt.TRANSACTIONS_FILE_NAME</string>
    <string name="categories_file_name">com.jaz.budgt.CATEGORIES_FILE_NAME</string>
    <string name="accounts_file_name">com.jaz.budgt.ACCOUNTS_FILE_NAME</string>
    <string name="clear_transactions">Clear Transactions</string>
    <string name="deleted_transactions">Deleted All Transactions!</string>
    <string name="deleted_accounts">Deleted Accounts!</string>
    <string name="amount_placeholder">$0000.00</string>
    <string name="short_amount_placeholder">$00.00</string>
    <string name="description">Description lorem ipsum description lorem ipsum description</string>
    <string name="add_category">Add Category</string>
    <string name="add_payment_type">Add Payment Type</string>
    <string name="duplicate_category">Category Already Exists!</string>
    <string name="duplicate_account">Account Already Exists!</string>
    <string name="total_spent">Total Spent: </string>
    <string name="average_per_day">Average Per Day: </string>
    <string name="clear_accounts">Delete Accounts</string>
    <string name="loading_from_csv">Loading from CSV...</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="file_not_found">File Not Found!</string>
    <string name="load_from_csv">Load Transactions from CSV</string>
    <string name="finished">Finished!</string>
    <string name="sample_date">10/31</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="load_default_categories">Load Default Categories</string>
    <string name="load_default_accounts">Load Default Accounts</string>
    <string name="please_enter_name">Please enter a name!</string>
    <string name="starting_export">Exporting transactions...</string>
    <string name="unable_to_write_file">Unable to write file!</string>
    <string name="unable_to_write_file_io_exception">Unable to write file. IO Exception.</string>
    <string name="no_transactions">No Transactions</string>
    <string name="transaction_filter_prompt">Last Week</string>
    <string name="showing_transactions_from">Showing transactions from: </string>
    <string name="which_account">Which Account</string>
    <string name="reimbursement_but_expense">This transaction has reimbursement in the description, but it is marked as an expense.</string>

    <string-array name="transaction_filter_array">
        <item>Today</item>
        <item>Last Week</item>
        <item>Last 2 Weeks</item>
        <item>Last Month</item>
        <item>Last 2 Months</item>
        <item>Year to Date</item>
        <item>All time</item>
    </string-array>

</resources>
