<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/clear_transactions"
        android:layout_centerHorizontal="true"
        android:id="@+id/clear_transactions_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/clear_transactions_button"
        android:text="@string/add_category"
        android:layout_centerHorizontal="true"
        android:id="@+id/add_category_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/add_category_button"
        android:text="@string/add_payment_type"
        android:layout_centerHorizontal="true"
        android:id="@+id/add_account_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/add_account_button"
        android:text="@string/clear_accounts"
        android:layout_centerHorizontal="true"
        android:id="@+id/delete_accounts_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/delete_accounts_button"
        android:text="@string/load_from_csv"
        android:layout_centerHorizontal="true"
        android:id="@+id/load_from_csv_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/load_from_csv_button"
        android:text="@string/load_default_categories"
        android:layout_centerHorizontal="true"
        android:id="@+id/load_default_categories_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/load_default_categories_button"
        android:text="@string/load_default_accounts"
        android:layout_centerHorizontal="true"
        android:id="@+id/load_default_accounts_button"
        />

</RelativeLayout>