<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_settings"
        android:textSize="30sp"
        android:id="@+id/settings_title"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/settings_title"
        android:text="@string/clear_transactions"
        android:layout_centerHorizontal="true"
        android:id="@+id/clear_transactions_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/clear_transactions_button"
        android:text="@string/add_category"
        android:layout_centerHorizontal="true"
        android:id="@+id/add_category_button"
        />

</RelativeLayout>