<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/date"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_amount"
        android:layout_toEndOf="@+id/list_item_date"
        android:layout_toRightOf="@+id/list_item_date"
        android:text="@string/amount_placeholder"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_description"
        android:layout_toEndOf="@+id/list_item_amount"
        android:layout_toRightOf="@+id/list_item_amount"
        android:layout_centerVertical="true"
        android:text="@string/description"
        android:textSize="18sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        />


    <RelativeLayout
        android:id="@+id/transaction_twoliner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        >

        <TextView
            android:id="@+id/list_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"
            tools:text="Title"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:id="@+id/list_item_trans_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_category"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="16sp"
            tools:text="Subtitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>
</RelativeLayout>
